Fix value label alignment (#266)

--- a/src/components/shared/ValueLabel/ValueLabel.scss
+++ b/src/components/shared/ValueLabel/ValueLabel.scss
@@ -1,4 +1,4 @@
 .raft__valueLabel {
   display: flex;
-  align-items: flex-end;
+  align-items: baseline;
 }
